<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/started_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_text"
            android:gravity="center"
            android:padding="@dimen/large_text_padding"/>

        <Button
            android:id="@+id/scan_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_now"
            android:background="@drawable/btn_round"
            android:paddingStart="@dimen/large_text_padding"
            android:paddingEnd="@dimen/large_text_padding"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textStyle="bold"/>

    </LinearLayout>

    <ExpandableListView
        android:id="@+id/chat_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerHeight="1dp"
        android:visibility="gone"
        android:divider="#ccc"/>

    <LinearLayout
        android:id="@+id/chat_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ListView
            android:id="@+id/in"
            android:layout_width="match_parent"
            android:layout_height="327dp"
            android:layout_weight="1.00"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:layout_weight="0.1"
            >

            <ImageView
                android:id="@+id/add_files"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="0.1"
                android:layout_gravity="bottom"
                android:paddingBottom="0dp"
                android:background="@drawable/ic_attach_file_black_24dp"/>

            <EditText
                android:id="@+id/edit_text_out"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:hint="Entrez votre message"
                android:layout_weight="0.80"
                android:background="#edf0f8"/>

            <Button
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="#3b5998"
                android:text="@string/send"
                android:layout_weight="0.1"
                android:layout_gravity="bottom"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>